2009-10-19  Chris Morley

	* include/openbabel/alias.h, src/alias.cpp: To convert an alias name
	(like Ph) to real chemistry, look up in a table, convert the SMILES
	of the fragment and add it in. 
	
	* data/superatom.txt: the datafile from http://cactus.nci.nih.gov/osra/
	It could do with more entries, which are easy to add.
	
	* src/formats/mdlformat.cpp: Reinstate the code reading  aliases which
	seems to have got mangled during a merge. Example in test/files/alias.mol

2009-10-24  Noel O'Boyle  <baoilleach@gmail.com>

	* src/parsmart.cpp, include/openbabel/parsmart.h: Make
	bond_parse_order an instance variable rather than a class variable.
	Fixes bug where multiple SMARTS patterns are parsed before being used
	to Match.

2009-10-08  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Don't attempt to fix stereochemistry if unspecified.
2009-10-19  Chris Morley

	* src/alias.cpp: Correct small memory leak as suggested by dcb #2881605

2009-10-06  Noel O'Boyle  <baoilleach@gmail.com>

	* src/forcefield.cpp: Correctly handle SteepestDescent and Conjugate
	Gradients where nsteps is 0 or 1

2009-10-05  Noel O'Boyle  <baoilleach@gmail.com>

	* src/forcefield.cpp: In ff.GetConformers(mol) if only a single
	conformer was generated it was not being copied.

2009-10-04  Noel O'Boyle  <baoilleach@gmail.com>

	* For Windows build, enable tests to be run in either Debug or Release
	build. Make the default solution file include the tests. Add a target
	for a minimal build.

2009-10-03  Noel O'Boyle  <baoilleach@gmail.com>

	* Update Windows build to use the InChI dll, and to build everything
	to the same folder (e.g. Release or Debug). Tests can be run in Debug
	build.

2009-10-03  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Update handling of stereochemistry to use new
	stereochemistry objects. For tetrahedral centres, stereochemistry is
	currently not corrected if there are three ring bonds on the centre.